changes to theme

--- a/theme/index.html
+++ b/theme/index.html
@@ -30,7 +30,7 @@
 				<div id="header" class="container">
 					
 					<!-- Logo -->
-						<h1 id="logo"><a href="index.html">Strongly Typed</a></h1>
+						<h1 id="logo"><a href="index.html">Old Class Games</a></h1>
 						<p>A responsive HTML5 site template. Manufactured by HTML5 UP.</p>
 					
 					<!-- Nav -->
@@ -74,9 +74,9 @@
 
 							<!-- Feature -->
 								<section>
-									<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="http://sarahjeong001.github.io/pandajump/index.html" class="image featured"><img src="images/download.jpg" alt="" /></a>
 									<header>
-										<h3>Okay, so what is this?</h3>
+										<h3>Panda Bear JUMP!</h3>
 									</header>
 									<p>This is <strong>Strongly Typed</strong>, a free, fully responsive site template 
 									by <a href="http://html5up.net">HTML5 UP</a>. Free for personal and commercial use under the 
@@ -88,9 +88,9 @@
 
 							<!-- Feature -->
 								<section>
-									<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="http://sarahjeong001.github.io/colorblast/index.html" class="image featured"><img src="images/download1.jpg" alt="" /></a>
 									<header>
-										<h3>Nice! What is HTML5 UP?</h3>
+										<h3>Color Blast!</h3>
 									</header>
 									<p><a href="http://html5up.net">HTML5 UP</a> is a side project of <a href="http://n33.co">AJ’s</a> (= me).  
 									I started it as a way to both test my <strong>skel</strong> framework and sharpen up my coding
