--- a/theme/index.html
+++ b/theme/index.html
@@ -31,7 +31,7 @@
 					
 					<!-- Logo -->
 						<h1 id="logo"><a href="index.html">Old Class Games</a></h1>
-						<p>A responsive HTML5 site template. Manufactured by HTML5 UP.</p>
+						<p>Original games modified for you!</p>
 					
 					<!-- Nav -->
 						<nav id="nav">
@@ -67,14 +67,14 @@
 			<div id="features-wrapper">
 				<section id="features" class="container">
 					<header>
-						<h2>Gentlemen, behold! This is <strong>Strongly Typed</strong>!</h2>
+						<h2>Kids! Adults! Behold, a site filled with games for all of you!</h2>
 					</header>
 					<div class="row">
 						<div class="4u">
 
 							<!-- Feature -->
 								<section>
-									<a href="http://sarahjeong001.github.io/pandajump/index.html" class="image featured"><img src="images/download.jpg" alt="" /></a>
+									<a href="http://sarahjeong001.github.io/pandajump/index.html" class="image featured"><img src="images/download.png" alt="" /></a>
 									<header>
 										<h3>Panda Bear JUMP!</h3>
 									</header>
@@ -88,7 +88,7 @@
 
 							<!-- Feature -->
 								<section>
-									<a href="http://sarahjeong001.github.io/colorblast/index.html" class="image featured"><img src="images/download1.jpg" alt="" /></a>
+									<a href="http://sarahjeong001.github.io/colorblast/index.html" class="image featured"><img src="images/download1.png" alt="" /></a>
 									<header>
 										<h3>Color Blast!</h3>
 									</header>
