--- a/theme/index.html
+++ b/theme/index.html
@@ -78,9 +78,7 @@
 									<header>
 										<h3>Panda Bear JUMP!</h3>
 									</header>
-									<p>This is <strong>Strongly Typed</strong>, a free, fully responsive site template 
-									by <a href="http://html5up.net">HTML5 UP</a>. Free for personal and commercial use under the 
-									<a href="http://html5up.net/license">CCA 3.0 license</a>.</p>
+									<p>THis is a modified version of Doodle Jump. It involves a panda jumping on platforms. If it falls, it dies. Simple as that. Hope you enjoy!</p>
 								</section>
 
 						</div>
@@ -92,9 +90,7 @@
 									<header>
 										<h3>Color Blast!</h3>
 									</header>
-									<p><a href="http://html5up.net">HTML5 UP</a> is a side project of <a href="http://n33.co">AJ’s</a> (= me).  
-									I started it as a way to both test my <strong>skel</strong> framework and sharpen up my coding
-									and design skills a bit.</p>
+									<p>A game with randome colors bursting from the enemies bullets and player's bullets. Full of excitement and color, Color Blast is a game that everyone in the family will enjoy.</p>
 								</section>
 								
 						</div>
@@ -102,13 +98,11 @@
 
 							<!-- Feature -->
 								<section>
-									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="http://sarahjeong001.wordpress.com" class="image featured"><img src="images/screenshot.png" alt="" /></a>
 									<header>
-										<h3>Skel? What's that?</h3>
+										<h3>My Blog!</h3>
 									</header>
-									<p><strong>Skel</strong> is a lightweight framework for building responsive 
-									sites and apps. All of my stuff at <a href="http://html5up.net">HTML5 UP</a> (including this 
-									one) are built on this framework.</p>
+									<p>My blog is full of posts of my discover days experience and lots more. Please check it out!</p>
 								</section>
 
 						</div>
