--- a/theme/index.html
+++ b/theme/index.html
@@ -36,27 +36,17 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a class="icon fa-home" href="index.html"><span>Introduction</span></a></li>
+								<li><a class="icon fa-home" href="index.html"><span>Home</span></a></li>
 								<li>
-									<a href="" class="icon fa-bar-chart-o"><span>Dropdown</span></a>
+									<a href="" class="icon fa-bar-chart-o"><span>Games</span></a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-										<li>
-											<a href="">Phasellus consequat</a>
-											<ul>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-												<li><a href="#">Phasellus consequat</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
+										<li><a href="http://sarahjeong001.github.io/pandajump/index.html">Panda Bear Jump</a></li>
+										<li><a href="http://sarahjeong001.github.io/colorblast/index.html">Color Blast</a></li>
+										
+									
 									</ul>
 								</li>
-								<li><a class="icon fa-cog" href="left-sidebar.html"><span>Left Sidebar</span></a></li>
-								<li><a class="icon fa-retweet" href="right-sidebar.html"><span>Right Sidebar</span></a></li>
-								<li><a class="icon fa-sitemap" href="no-sidebar.html"><span>No Sidebar</span></a></li>
+								<li><a class="icon fa-sitemap" href="https://sarahjeong001.wordpress.com/"><span>My Blog</span></a></li>
 							</ul>
 						</nav>
 
