--- a/theme/index.html
+++ b/theme/index.html
@@ -98,7 +98,7 @@
 						</div>
 					</div>
 					<ul class="actions">
-						<li><a href="codepen.io" class="button icon fa-file">More modified games by people</a></li>
+						<li><a href="http://codepen.io" class="button icon fa-file">More modified games by people</a></li>
 					</ul>
 				</section>		
 			</div>
