--- a/theme/index.html
+++ b/theme/index.html
@@ -170,7 +170,7 @@
 													<article class="box excerpt">
 														<header>
 															<span class="date">March 31</span>
-															<h3><a href="codepen.io">Codepen</a></h3>
+															<h3><a href="http://codepen.io">Codepen</a></h3>
 														</header>
 														<p>Codepen organizes all your codes, css,html, js. It's a great way to start your coding journey.</p>
 													</article>
