another link change

--- a/theme/index.html
+++ b/theme/index.html
@@ -182,7 +182,7 @@
 													<article class="box excerpt">
 														<header>
 															<span class="date">March 31</span>
-															<h3><a href="www.w3schools.com">Online coding school</a></h3>
+															<h3><a href="http://www.w3schools.com/">Online coding school</a></h3>
 														</header>
 														<p>If you are not able to join a coding academy, but still want to start coding, you may want to check out W3schools. It has step-to-step instructions for you. Enjoy!</p>
 													</article>
