--- a/theme/index.html
+++ b/theme/index.html
@@ -157,7 +157,7 @@
 												<!-- Excerpt -->
 													<article class="box excerpt">
 														<header>
-															<span class="date">Mach 31</span>
+															<span class="date">March 31</span>
 															<h3><a href="http://github.com">About Github</a></h3>
 														</header>
 														<p>Github helps you start off your very own website using files from servers and your own computer.</p>
