--- a/theme/index.html
+++ b/theme/index.html
@@ -254,7 +254,7 @@
 									</div>
 									<div class="row 50%">
 										<div class="12u">
-											<a href="sarahjeong001@lionsdenhk.net" class="form-button-submit button icon fa-envelope">Send Message</a>
+											<a href="#" class="form-button-submit button icon fa-envelope">Send Message</a>
 										</div>
 									</div>
 								</form>
@@ -275,7 +275,7 @@
 												(000) 000-0000
 											</li>
 											<li class="icon fa-envelope">
-												<a href="#">info@untitled.tld</a>
+												sarahjeong001@lionsdenhk.net
 											</li>
 										</ul>
 									</div>
