hope to be final changes

--- a/theme/index.html
+++ b/theme/index.html
@@ -254,7 +254,7 @@
 									</div>
 									<div class="row 50%">
 										<div class="12u">
-											<a href="#" class="form-button-submit button icon fa-envelope">Send Message</a>
+											<a href="mailto:sarahjeong001@lionsdenhk.net" class="form-button-submit button icon fa-envelope">Send Message</a>
 										</div>
 									</div>
 								</form>
@@ -269,7 +269,7 @@
 											<li class="icon fa-home">
 												1234 Somewhere Road<br />
 												Nashville, TN 00000<br />
-												USA
+												HK
 											</li>
 											<li class="icon fa-phone">
 												(000) 000-0000
