--- a/theme/index.html
+++ b/theme/index.html
@@ -31,7 +31,7 @@
 					
 					<!-- Logo -->
 						<h1 id="logo"><a href="index.html">Old Class Games</a></h1>
-						<p>Original games modified for you!</p>
+						<p>Original games modified just for you!</p>
 					
 					<!-- Nav -->
 						<nav id="nav">
@@ -275,7 +275,7 @@
 												(000) 000-0000
 											</li>
 											<li class="icon fa-envelope">
-												sarahjeong001@lionsdenhk.net
+												sarahsohappy@hotmail.com
 											</li>
 										</ul>
 									</div>
