--- a/theme/index.html
+++ b/theme/index.html
@@ -254,7 +254,7 @@
 									</div>
 									<div class="row 50%">
 										<div class="12u">
-											<a href="mailto:sarahjeong001@lionsdenhk.net" class="form-button-submit button icon fa-envelope">Send Message</a>
+											<a href="mailto:sarahsohappy@hotmail.com" class="form-button-submit button icon fa-envelope">Send Message</a>
 										</div>
 									</div>
 								</form>
