website changes after new game

--- a/theme/index.html
+++ b/theme/index.html
@@ -42,6 +42,7 @@
 									<ul>
 										<li><a href="http://sarahjeong001.github.io/pandajump/index.html">Panda Bear Jump</a></li>
 										<li><a href="http://sarahjeong001.github.io/colorblast/index.html">Color Blast</a></li>
+										<lil><a href="http://sarahjeong001.github.io/ourgame/index.html">Guess!</a></lil>
 										
 									
 									</ul>
@@ -88,11 +89,11 @@
 
 							<!-- Feature -->
 								<section>
-									<a href="http://sarahjeong001.wordpress.com" class="image featured"><img src="images/screenshot.png" alt="" /></a>
+									<a href="http://sarahjeong001.github.io/ourgame/index.html"><img src="https://lh6.ggpht.com/YzPcUsVJjOwbCi8euoQHQenW8Pc6vKDCIJ_cFlQ0dTgETH_uKipBfShg_rjGaLABVvI=w300" alt="" /></a>
 									<header>
-										<h3>My Blog!</h3>
+										<h3>Guess!</h3>
 									</header>
-									<p>My blog is full of posts of my discover days experience and lots more. Please check it out!</p>
+									<p>This is a riddle-guessing game developed by Mandy and me. This is a pop-up game that will make your brain explode. Because we built this from scratch, it's not the best, but hope you still like it! :)</p>
 								</section>
 
 						</div>
